--- a/index.html
+++ b/index.html
@@ -2,20 +2,119 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro"/>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro"
+    />
     <script src="script.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
     <h1>Buttons</h1>
-    <div class="row">
+    <div class="row row1">
       <div class="column col1">
         <h3>Buttons</h3>
-        <button type="button bt1" href="me.html">Default</button>  
+        <button type="button bt1" href="me.html">Default</button>
       </div>
       <div class="column col2">
-          <h3>Buttons</h3>
-          <button type="button bt1" href="me.html">Default</button>
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row2">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row3">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row4">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row5">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row6">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row7">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col3">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row8">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col3">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col4">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+    </div>
+    <div class="row row9">
+      <div class="column col1">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col2">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col3">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
+      </div>
+      <div class="column col4">
+        <h3>Buttons</h3>
+        <button type="button bt1" href="me.html">Default</button>
       </div>
     </div>
   </body>
