--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="row row2">
       <div class="column col1">
-        <h3>Buttons</h3>
-        <button type="button bt1" href="me.html">Default</button>
+        <h3>Buttons varian Outline</h3>
+        <button type="button" href="me.html" variant="outline">Default</button>
       </div>
       <div class="column col2">
         <h3>Buttons</h3>
